RESOLVED FIXED90001
IndexedDB: Hook up render-side key ASSERTing for get()
https://bugs.webkit.org/show_bug.cgi?id=90001
Summary IndexedDB: Hook up render-side key ASSERTing for get()
Alec Flett
Reported 2012-06-26 11:46:09 PDT
IndexedDB: Hook up render-side key ASSERTing for get()
Attachments
Patch (12.54 KB, patch)
2012-06-26 14:02 PDT, Alec Flett
no flags
Patch (12.55 KB, patch)
2012-06-26 14:07 PDT, Alec Flett
no flags
Patch (45.24 KB, patch)
2012-06-27 12:33 PDT, Alec Flett
no flags
Patch (45.24 KB, patch)
2012-06-27 12:37 PDT, Alec Flett
no flags
Patch for landing (13.66 KB, patch)
2012-06-27 14:55 PDT, Alec Flett
no flags
Alec Flett
Comment 1 2012-06-26 14:02:58 PDT
WebKit Review Bot
Comment 2 2012-06-26 14:05:18 PDT
Attachment 149603 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/ChangeLog:6: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 12 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alec Flett
Comment 3 2012-06-26 14:06:32 PDT
jsbell@ - mind a once-over? this is dependent on (and the patch is based on top of) the patch in https://bugs.webkit.org/show_bug.cgi?id=89377 - this won't land cleanly until that bug is fixed.
Alec Flett
Comment 4 2012-06-26 14:07:34 PDT
Joshua Bell
Comment 5 2012-06-26 15:20:34 PDT
Comment on attachment 149604 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=149604&action=review > Source/WebCore/Modules/indexeddb/IDBCursor.cpp:273 > + // FIXME: Assert until we can actually inject the right value. This FIXME just describes the current state; change it to describe the desired change. > Source/WebCore/Modules/indexeddb/IDBCursor.cpp:277 > + if (!keyPath.isNull()) { This check is redundant. > Source/WebCore/Modules/indexeddb/IDBCursor.cpp:278 > + RefPtr<IDBKey> expectedKey = Unnecessary line break.
Alec Flett
Comment 6 2012-06-27 12:33:21 PDT
Alec Flett
Comment 7 2012-06-27 12:37:46 PDT
Alec Flett
Comment 8 2012-06-27 12:39:57 PDT
Hey tony@ - another one here, continuing some refactoring work with some chromium plumbing. r? cq?
Tony Chang
Comment 9 2012-06-27 13:53:18 PDT
Comment on attachment 149786 [details] Patch Might be nice to have a clean ews run before landing. View in context: https://bugs.webkit.org/attachment.cgi?id=149786&action=review > Source/WebCore/ChangeLog:28 > + (WebCore): > + > +2012-06-26 Joshua Bell <jsbell@chromium.org> > + Looks like a merge conflict? > Source/WebCore/inspector/InspectorIndexedDBAgent.cpp:115 > virtual void onSuccess(PassRefPtr<IDBTransactionBackendInterface>) { } > virtual void onSuccess(PassRefPtr<SerializedScriptValue>) { } > + virtual void onSuccess(PassRefPtr<SerializedScriptValue>, PassRefPtr<IDBKey>, const IDBKeyPath&) { } Nit: Should these all have OVERRIDE?
Alec Flett
Comment 10 2012-06-27 14:43:32 PDT
hmm... somehow my git repository got stuck on a day-old chrome version, which means my webkit diff was broken. new patch coming up (almost identical, but with nits addressed, changelog fixed)
Alec Flett
Comment 11 2012-06-27 14:55:34 PDT
Created attachment 149801 [details] Patch for landing
Alec Flett
Comment 12 2012-06-28 15:14:27 PDT
jsbell@ - cq? (you reviewed this earlier...)
WebKit Review Bot
Comment 13 2012-06-28 15:57:23 PDT
Comment on attachment 149801 [details] Patch for landing Clearing flags on attachment: 149801 Committed r121477: <http://trac.webkit.org/changeset/121477>
WebKit Review Bot
Comment 14 2012-06-28 15:57:30 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.